is it stylish yet?

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,20 @@
 <html>
     <head>
-        <link rel="stylesheet" href='/static/home-screen-style.css' />
+        <link rel="stylesheet" 
+            href='/static/home-screen-style.css' />
     </head>
     <body>
-        <h1>
-            Chem Caravan
-        </h1>
+        <div class=title-block>
+            <h1>
+                Chem Caravan
+            </h1>
+            <h3>
+                A game of statistical adventure
+            </h3>
+        </div>
+
+        <div class=nav-link>
+            <a href="/concord">Enter the Commonwealth</a>
+        </div>
     </body>
 </html>
