--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,20 +1,13 @@
-<html>
-    <head>
-        <link rel="stylesheet" 
-            href='/static/home-screen-style.css' />
-    </head>
-    <body>
-        <div class=title-block>
-            <h1>
-                Chem Caravan
-            </h1>
-            <h3>
-                A game of statistical adventure
-            </h3>
-        </div>
-
-        <div class=nav-link>
-            <a href="/concord">Enter the Commonwealth</a>
-        </div>
-    </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Frontend</title>
+  <base href="/static/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
